add controller tests